# geno-vault

./: .gitignore  AGENTS.md  GENO.md  LICENSE  README.md  SKILL.md  genotools.yaml  layer.json  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
geno_vault/: __init__.py  cli.py  daemon.py  gui.py  vault.py  ws.py
skills/status/: SKILL.md
skills/sync/: SKILL.md
skills/watch/: SKILL.md
skills/ws/add-repo/: SKILL.md
skills/ws/add-ticket/: SKILL.md
skills/ws/init/: SKILL.md
skills/ws/open/: SKILL.md
tests/: test_ws.py
