[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "geno-vault"
version = "0.3.0"
description = "Persistence + sync conductor for the geno object-notation registry (the `vault` CLI)."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "42euge" }]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
watch = ["geno-pear @ git+https://github.com/42euge/geno-pear.git"]
test = ["pytest>=8.0"]

[project.scripts]
vault = "geno_vault.cli:main"

[tool.setuptools.packages.find]
include = ["geno_vault*"]
